# ESP32-WROVER-PPP-AMB-SQL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
components/esp_firebase/: CMakeLists.txt  app.cpp  app.h  firebase_c_shim.cpp  rtdb.cpp  rtdb.h
components/esp_firebase/include/: firebase.h
components/esp_hostinger/: CMakeLists.txt  hostinger_admin.c  hostinger_ingest.c
components/esp_hostinger/include/: hostinger_ingest.h
components/jsoncpp/: CMakeLists.txt
main/: CMakeLists.txt  Privado.example.h  geo_cache.c  geo_cache.h  main.c  modem_ppp.c  modem_ppp.h  ota_update.c  ota_update.h  sensors.c  sensors.h
